--- a/src/app/components/game-types/game-type/game-type.component.html
+++ b/src/app/components/game-types/game-type/game-type.component.html
@@ -1,12 +1,12 @@
-<ul>
-    <li *ngFor="let item of types">
-      <!-- <strong>1-</strong>=> <span>{{item.id}}</span><br>
-      <strong>2-</strong>=> <span>{{item.id}}</span><br> -->
-      <!-- <strong>Password</strong>=> <span>{{item.password}}</span> -->
-      <button class="typeBtn" (click)="goToGame(item.id)" class="{{item.type}}">{{item.type}}</button>
-      <!-- <button (click)="updateData(item.id)">{{item.id}}</button> -->
-    </li>
-  </ul>
+
+<ul class="typesPage">
+  <li class="typesPage-type">
+    <p class="typesPage-text">You Can Choose Your Type:-</p>
+  </li>
+  <li class="typesPage-type" *ngFor="let item of gameTypes">
+    <button class="typesPage-typeBtn" (click)="goToGame(item.id)" class="{{item.type}}">{{item.type}}</button>
+  </li>
+</ul>
   <!-- <ul>
     <li *ngFor="let item of typesInfo">
       <strong>Fb</strong>=> <span>{{item.fb}}</span><br>
